# CLS-Complex_System_Simulation

./: .pre-commit-config.yaml  README.md  call_boiler.py  hello.py  jammed.txt  main.py  pyproject.toml  requirements.txt  temp.md
data/: raw_results.json  simulation.txt  simulation_results.csv
data/block_size/: raw_results.json  simulation_results.csv
data/maxspeed/: maxspeed_simulation_results_20250129_114424.csv  maxspeed_simulation_results_20250129_114552.csv  maxspeed_simulation_results_20250129_114722.csv  maxspeed_simulation_results_20250129_115238.csv  maxspeed_simulation_results_20250129_115510.csv  maxspeed_simulation_results_20250129_120142.csv  results_20250129_114424.json  results_20250129_114552.json  results_20250129_114722.json  results_20250129_115145.json  results_20250129_115238.json  results_20250129_115510.json  results_20250129_115954.json  results_20250129_120142.json
data/road_length/: results_29011211.json  results_29011215.json  results_29011216.json  results_29011223.json  results_29011241.json  results_29011242.json  results_29011244.json  results_29011246.json  results_29011247.json  results_29011252.json  simulation_results_29011211.csv  simulation_results_29011215.csv  simulation_results_29011216.csv  simulation_results_29011223.csv  simulation_results_29011241.csv  (+5 more)
src/: car.py  car_old.py  density.py  experiment.py  grid.py  helper_classes.py  helpers.py  main.py  nagel_schreckenberg.py  plot_density_vs_speed.py  simulation.py  simulation_boilerplate.py  simulation_old.py  test.py  test_simulation.py  updated_grid.py  utils.py
(+145 files in other folders)
