[project]
name = "complex-system-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "powerlaw>=1.5",
    "scipy>=1.15.1",
    "tk>=0.1.0",
    "tqdm>=4.67.1",
]
